--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "NODE_PATH=. babel-node index.js --presets es2015",
+    "build": "babel src --presets es2015 --out-dir built",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nathan Holland <Nathan.Holland@granicus.com>",
